--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "tone": "^13.8.25"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
