--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
@@ -16,7 +17,6 @@
   "bugs": {
     "url": "https://github.com/gabrielaacha/zamagana_synth/issues"
   },
-  "homepage": "https://github.com/gabrielaacha/zamagana_synth#readme",
   "dependencies": {
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -26,5 +26,17 @@
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
