--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-keyboard-event-handler": "^1.5.4",
+    "react-keydown": "^1.9.12",
     "react-scripts": "^3.4.1",
     "tone": "^13.8.25"
   },
