--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   },
   "dependencies": {
     "autoprefixer": "^9.8.0",
+    "bootstrap": "^4.5.0",
     "node-sass": "^4.14.1",
-    "normalize.css": "^8.0.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
     "react-keyboard-event-handler": "^1.5.4",
     "react-keydown": "^1.9.12",
+    "react-modal": "^3.11.2",
     "react-scripts": "^3.4.1",
     "tone": "^13.8.25"
   },
