--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
+    "react-highlight-words": "^0.16.0",
     "react-keyboard-event-handler": "^1.5.4",
     "react-keydown": "^1.9.12",
     "react-modal": "^3.11.2",
